--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -709,12 +709,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "id": "c211f234",
       "metadata": {
-        "id": "c211f234"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c211f234",
+        "outputId": "52961c44-e994-4384-d05c-b1854fee9cd0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-10-05 15:11:33--  https://storage.googleapis.com/tensorflow-1-public/colab_metadata_checker.py\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.212.207, 142.251.162.207, 173.194.215.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.212.207|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1997 (2.0K) [text/x-python-script]\n",
+            "Saving to: ‘colab_metadata_checker.py’\n",
+            "\n",
+            "\r          colab_met   0%[                    ]       0  --.-KB/s               \rcolab_metadata_chec 100%[===================>]   1.95K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2023-10-05 15:11:33 (35.0 MB/s) - ‘colab_metadata_checker.py’ saved [1997/1997]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Download metadata checker\n",
         "!wget -nc https://storage.googleapis.com/tensorflow-1-public/colab_metadata_checker.py"
@@ -722,12 +744,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 88,
       "id": "50587d8c",
       "metadata": {
-        "id": "50587d8c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "50587d8c",
+        "outputId": "3ad4294a-886b-4ca0-aa0b-0597b9cb8584"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Grader metadata detected! You can download this notebook by clicking `File > Download > Download as .ipynb` and submit it to the grader!\n"
+          ]
+        }
+      ],
       "source": [
         "import colab_metadata_checker\n",
         "\n",
