--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -205,8 +205,6 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# GRADED FUNCTION: parse_data_from_input\n",
         "def parse_data_from_input(filename):\n",
         "  \"\"\"\n",
@@ -223,10 +221,24 @@
         "\n",
         "    # Use csv.reader, passing in the appropriate delimiter\n",
         "    # Remember that csv.reader can be iterated and returns one line in each iteration\n",
-        "    csv_reader = csv.reader(file, delimiter=None)\n",
+        "    csv_reader = csv.reader(file, delimiter=' ')\n",
         "\n",
-        "    labels = None\n",
-        "    images = None\n",
+        "    labels = []\n",
+        "    images = []\n",
+        "    count = 0\n",
+        "    for row in csv_reader:\n",
+        "      if (count > 0):\n",
+        "        row = row[0].split(',')\n",
+        "        row = list(map(float, row))\n",
+        "        # import pdb; pdb.set_trace()\n",
+        "        images.append(row[1:])\n",
+        "        labels.append(row[0])\n",
+        "      count += 1\n",
+        "\n",
+        "    # reshape the images\n",
+        "    images, labels = np.array(images), np.array(labels)\n",
+        "    to_size = int(images.shape[1]**0.5)\n",
+        "    images = np.reshape(images, (images.shape[0], to_size, to_size))\n",
         "\n",
         "\n",
         "    ### END CODE HERE\n",
@@ -336,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "id": "42157a8c",
       "metadata": {
         "cellView": "code",
@@ -396,30 +408,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "id": "0225e001",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "0225e001",
-        "outputId": "db87e1d0-9326-493a-87d1-81f67f9b30e5",
         "tags": [
           "graded"
         ]
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Images of training generator have shape: (27455, 28, 28, 1)\n",
-            "Labels of training generator have shape: (27455,)\n",
-            "Images of validation generator have shape: (7172, 28, 28, 1)\n",
-            "Labels of validation generator have shape: (7172,)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -472,52 +469,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "id": "f9598ae6",
       "metadata": {
         "cellView": "code",
         "id": "f9598ae6",
         "tags": [
           "graded"
-        ],
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6e4ddae5-ff9d-4833-80ab-59f55467b67d"
+        ]
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"sequential_1\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " conv2d_2 (Conv2D)           (None, 26, 26, 64)        640       \n",
-            "                                                                 \n",
-            " max_pooling2d_2 (MaxPoolin  (None, 13, 13, 64)        0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " conv2d_3 (Conv2D)           (None, 11, 11, 64)        36928     \n",
-            "                                                                 \n",
-            " max_pooling2d_3 (MaxPoolin  (None, 5, 5, 64)          0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " flatten_1 (Flatten)         (None, 1600)              0         \n",
-            "                                                                 \n",
-            " dense_2 (Dense)             (None, 512)               819712    \n",
-            "                                                                 \n",
-            " dense_3 (Dense)             (None, 26)                13338     \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 870618 (3.32 MB)\n",
-            "Trainable params: 870618 (3.32 MB)\n",
-            "Non-trainable params: 0 (0.00 Byte)\n",
-            "_________________________________________________________________\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import tensorflow as tf\n",
         "\n",
@@ -551,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "id": "125be6c8",
       "metadata": {
         "colab": {
@@ -559,7 +520,7 @@
         },
         "id": "125be6c8",
         "lines_to_next_cell": 2,
-        "outputId": "2723a2bb-7341-45d2-8411-2a6282432f71",
+        "outputId": "d0ecd6b5-af5a-49e3-93a8-ed1b1f5083b8",
         "tags": []
       },
       "outputs": [
@@ -568,35 +529,15 @@
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "858/858 [==============================] - 72s 83ms/step - loss: 2.6127 - accuracy: 0.1979 - val_loss: 1.5596 - val_accuracy: 0.4596\n",
+            "858/858 [==============================] - 68s 77ms/step - loss: 2.5917 - accuracy: 0.2035 - val_loss: 1.4868 - val_accuracy: 0.5282\n",
             "Epoch 2/15\n",
-            "858/858 [==============================] - 69s 80ms/step - loss: 1.7452 - accuracy: 0.4465 - val_loss: 1.0702 - val_accuracy: 0.6280\n",
+            "858/858 [==============================] - 61s 71ms/step - loss: 1.7812 - accuracy: 0.4319 - val_loss: 0.9685 - val_accuracy: 0.6836\n",
             "Epoch 3/15\n",
-            "858/858 [==============================] - 70s 82ms/step - loss: 1.3438 - accuracy: 0.5573 - val_loss: 0.7333 - val_accuracy: 0.7434\n",
+            "858/858 [==============================] - 62s 72ms/step - loss: 1.3827 - accuracy: 0.5452 - val_loss: 0.7740 - val_accuracy: 0.7518\n",
             "Epoch 4/15\n",
-            "858/858 [==============================] - 69s 80ms/step - loss: 1.0958 - accuracy: 0.6361 - val_loss: 0.5423 - val_accuracy: 0.8031\n",
+            "858/858 [==============================] - 71s 83ms/step - loss: 1.1430 - accuracy: 0.6232 - val_loss: 0.8641 - val_accuracy: 0.6899\n",
             "Epoch 5/15\n",
-            "858/858 [==============================] - 69s 80ms/step - loss: 0.9242 - accuracy: 0.6963 - val_loss: 0.5728 - val_accuracy: 0.7861\n",
-            "Epoch 6/15\n",
-            "858/858 [==============================] - 68s 79ms/step - loss: 0.8214 - accuracy: 0.7273 - val_loss: 0.3481 - val_accuracy: 0.8744\n",
-            "Epoch 7/15\n",
-            "858/858 [==============================] - 70s 82ms/step - loss: 0.7153 - accuracy: 0.7604 - val_loss: 0.4122 - val_accuracy: 0.8450\n",
-            "Epoch 8/15\n",
-            "858/858 [==============================] - 69s 80ms/step - loss: 0.6536 - accuracy: 0.7815 - val_loss: 0.3289 - val_accuracy: 0.8826\n",
-            "Epoch 9/15\n",
-            "858/858 [==============================] - 70s 82ms/step - loss: 0.5934 - accuracy: 0.7997 - val_loss: 0.2925 - val_accuracy: 0.8996\n",
-            "Epoch 10/15\n",
-            "858/858 [==============================] - 68s 79ms/step - loss: 0.5452 - accuracy: 0.8189 - val_loss: 0.2799 - val_accuracy: 0.9059\n",
-            "Epoch 11/15\n",
-            "858/858 [==============================] - 69s 80ms/step - loss: 0.5160 - accuracy: 0.8260 - val_loss: 0.2064 - val_accuracy: 0.9361\n",
-            "Epoch 12/15\n",
-            "858/858 [==============================] - 66s 77ms/step - loss: 0.4795 - accuracy: 0.8392 - val_loss: 0.2393 - val_accuracy: 0.9251\n",
-            "Epoch 13/15\n",
-            "858/858 [==============================] - 66s 76ms/step - loss: 0.4458 - accuracy: 0.8507 - val_loss: 0.1694 - val_accuracy: 0.9377\n",
-            "Epoch 14/15\n",
-            "858/858 [==============================] - 63s 73ms/step - loss: 0.4316 - accuracy: 0.8558 - val_loss: 0.1759 - val_accuracy: 0.9387\n",
-            "Epoch 15/15\n",
-            "858/858 [==============================] - 65s 76ms/step - loss: 0.4089 - accuracy: 0.8601 - val_loss: 0.1704 - val_accuracy: 0.9414\n"
+            "249/858 [=======>......................] - ETA: 40s - loss: 1.0220 - accuracy: 0.6590"
           ]
         }
       ],
@@ -622,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 89,
       "id": "f1567eef",
       "metadata": {
         "colab": {
@@ -630,7 +571,7 @@
           "height": 887
         },
         "id": "f1567eef",
-        "outputId": "312c1f07-f84d-4dc4-8ace-688dee454018",
+        "outputId": "18f3bee3-8ad1-4dd3-ebf4-380018675a29",
         "tags": []
       },
       "outputs": [
@@ -709,34 +650,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "id": "c211f234",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c211f234",
-        "outputId": "52961c44-e994-4384-d05c-b1854fee9cd0"
+        "id": "c211f234"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-10-05 15:11:33--  https://storage.googleapis.com/tensorflow-1-public/colab_metadata_checker.py\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.212.207, 142.251.162.207, 173.194.215.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.212.207|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1997 (2.0K) [text/x-python-script]\n",
-            "Saving to: ‘colab_metadata_checker.py’\n",
-            "\n",
-            "\r          colab_met   0%[                    ]       0  --.-KB/s               \rcolab_metadata_chec 100%[===================>]   1.95K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2023-10-05 15:11:33 (35.0 MB/s) - ‘colab_metadata_checker.py’ saved [1997/1997]\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Download metadata checker\n",
         "!wget -nc https://storage.googleapis.com/tensorflow-1-public/colab_metadata_checker.py"
@@ -744,24 +663,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "id": "50587d8c",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "50587d8c",
-        "outputId": "3ad4294a-886b-4ca0-aa0b-0597b9cb8584"
+        "id": "50587d8c"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Grader metadata detected! You can download this notebook by clicking `File > Download > Download as .ipynb` and submit it to the grader!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import colab_metadata_checker\n",
         "\n",
