--- a/Copia_de_C2W1_Assignment.ipynb
+++ b/Copia_de_C2W1_Assignment.ipynb
@@ -79,9 +79,31 @@
       "metadata": {
         "id": "dfe8528d",
         "lines_to_next_cell": 2,
-        "tags": []
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2d7c842-4672-450a-93d8-505629a18360"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-10-06 05:16:43--  https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip\n",
+            "Resolving download.microsoft.com (download.microsoft.com)... 23.33.180.218, 2600:1408:c400:c81::317f, 2600:1408:c400:c85::317f\n",
+            "Connecting to download.microsoft.com (download.microsoft.com)|23.33.180.218|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 824887076 (787M) [application/octet-stream]\n",
+            "Saving to: ‘/tmp/cats-and-dogs.zip’\n",
+            "\n",
+            "/tmp/cats-and-dogs. 100%[===================>] 786.67M  77.8MB/s    in 10s     \n",
+            "\n",
+            "2023-10-06 05:16:54 (76.4 MB/s) - ‘/tmp/cats-and-dogs.zip’ saved [824887076/824887076]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# If the URL doesn't work, visit https://www.microsoft.com/en-us/download/confirmation.aspx?id=54765\n",
         "# And right click on the 'Download Manually' link to get a new URL to the dataset\n",
@@ -116,9 +138,22 @@
         "id": "76034c9d",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8495f7cb-32e2-4a4a-f7dd-304533acdc6d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 12500 images of dogs.\n",
+            "There are 12500 images of cats.\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -200,6 +235,19 @@
         "  # Use os.makedirs to create your directories with intermediate subdirectories\n",
         "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
         "\n",
+        "  ### START CODE HERE\n",
+        "  path = os.path.join(root_path, \"training\")\n",
+        "  os.makedirs(path)\n",
+        "  path_1 = os.path.join(path, \"cats\")\n",
+        "  os.makedirs(path_1)\n",
+        "  path_2 = os.path.join(path, \"dogs\")\n",
+        "  os.makedirs(path_2)\n",
+        "  path = os.path.join(root_path, \"testing\")\n",
+        "  os.makedirs(path)\n",
+        "  path_3 = os.path.join(path, \"cats\")\n",
+        "  os.makedirs(path_3)\n",
+        "  path_4 = os.path.join(path, \"dogs\")\n",
+        "  os.makedirs(path_4)\n",
         "  pass\n",
         "\n",
         "\n",
@@ -220,9 +268,26 @@
         "id": "08f735fe",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d5c8811-1377-4679-d85f-60de23bfd02d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/tmp/cats-v-dogs/training\n",
+            "/tmp/cats-v-dogs/testing\n",
+            "/tmp/cats-v-dogs/training/dogs\n",
+            "/tmp/cats-v-dogs/training/cats\n",
+            "/tmp/cats-v-dogs/testing/dogs\n",
+            "/tmp/cats-v-dogs/testing/cats\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -288,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "e1c123a7",
       "metadata": {
         "cellView": "code",
@@ -299,43 +364,68 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# GRADED FUNCTION: split_data\n",
-        "def split_data(SOURCE_DIR, TRAINING_DIR, VALIDATION_DIR, SPLIT_SIZE):\n",
-        "  \"\"\"\n",
-        "  Splits the data into train and test sets\n",
-        "\n",
-        "  Args:\n",
-        "    SOURCE_DIR (string): directory path containing the images\n",
-        "    TRAINING_DIR (string): directory path to be used for training\n",
-        "    VALIDATION_DIR (string): directory path to be used for validation\n",
-        "    SPLIT_SIZE (float): proportion of the dataset to be used for training\n",
-        "\n",
-        "  Returns:\n",
-        "    None\n",
-        "  \"\"\"\n",
+        "def split_data(SOURCE, TRAINING, TESTING, SPLIT_SIZE):\n",
         "\n",
         "  ### START CODE HERE\n",
-        "  pass\n",
+        "  files = []\n",
+        "  for filename in os.listdir(SOURCE):\n",
+        "    file = SOURCE + filename\n",
+        "    if os.path.getsize(file) > 0:\n",
+        "      files.append(filename)\n",
+        "    else:\n",
+        "      print(filename + ' is zero length, so ignoring.')\n",
         "\n",
-        "  ### END CODE HERE"
+        "    training_length = int(len(files) * SPLIT_SIZE)\n",
+        "    testing_length = int(len(files) - training_length)\n",
+        "    shuffled_set = random.sample(files, len(files))\n",
+        "    training_set = shuffled_set[0:training_length]\n",
+        "    testing_set = shuffled_set[-testing_length:]\n",
+        "\n",
+        "  for filename in training_set:\n",
+        "    src_file = SOURCE + filename\n",
+        "    dest_file = TRAINING + filename\n",
+        "    copyfile(src_file, dest_file)\n",
+        "\n",
+        "  for filename in testing_set:\n",
+        "    src_file = SOURCE + filename\n",
+        "    dest_file = TESTING + filename\n",
+        "    copyfile(src_file, dest_file)\n",
+        "\n",
+        "  pass"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "7f488106",
       "metadata": {
         "id": "7f488106",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a6aed15-96b6-4454-fef6-00ecc8de98ad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "666.jpg is zero length, so ignoring.\n",
+            "11702.jpg is zero length, so ignoring.\n",
+            "\n",
+            "\n",
+            "There are 11249 images of cats for training\n",
+            "There are 11249 images of dogs for training\n",
+            "There are 1250 images of cats for testing\n",
+            "There are 1250 images of dogs for testing\n"
+          ]
+        }
+      ],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# Test your split_data function\n",
         "\n",
         "# Define paths\n",
@@ -343,13 +433,13 @@
         "DOG_SOURCE_DIR = \"/tmp/PetImages/Dog/\"\n",
         "\n",
         "TRAINING_DIR = \"/tmp/cats-v-dogs/training/\"\n",
-        "VALIDATION_DIR = \"/tmp/cats-v-dogs/validation/\"\n",
+        "TESTING_DIR = \"/tmp/cats-v-dogs/testing/\"\n",
         "\n",
         "TRAINING_CATS_DIR = os.path.join(TRAINING_DIR, \"cats/\")\n",
-        "VALIDATION_CATS_DIR = os.path.join(VALIDATION_DIR, \"cats/\")\n",
+        "TESTING_CATS_DIR = os.path.join(TESTING_DIR, \"cats/\")\n",
         "\n",
         "TRAINING_DOGS_DIR = os.path.join(TRAINING_DIR, \"dogs/\")\n",
-        "VALIDATION_DOGS_DIR = os.path.join(VALIDATION_DIR, \"dogs/\")\n",
+        "TESTING_DOGS_DIR = os.path.join(TESTING_DIR, \"dogs/\")\n",
         "\n",
         "# Empty directories in case you run this cell multiple times\n",
         "if len(os.listdir(TRAINING_CATS_DIR)) > 0:\n",
@@ -358,11 +448,11 @@
         "if len(os.listdir(TRAINING_DOGS_DIR)) > 0:\n",
         "  for file in os.scandir(TRAINING_DOGS_DIR):\n",
         "    os.remove(file.path)\n",
-        "if len(os.listdir(VALIDATION_CATS_DIR)) > 0:\n",
-        "  for file in os.scandir(VALIDATION_CATS_DIR):\n",
+        "if len(os.listdir(TESTING_CATS_DIR)) > 0:\n",
+        "  for file in os.scandir(TESTING_CATS_DIR):\n",
         "    os.remove(file.path)\n",
-        "if len(os.listdir(VALIDATION_DOGS_DIR)) > 0:\n",
-        "  for file in os.scandir(VALIDATION_DOGS_DIR):\n",
+        "if len(os.listdir(TESTING_DOGS_DIR)) > 0:\n",
+        "  for file in os.scandir(TESTING_DOGS_DIR):\n",
         "    os.remove(file.path)\n",
         "\n",
         "# Define proportion of images used for training\n",
@@ -370,20 +460,14 @@
         "\n",
         "# Run the function\n",
         "# NOTE: Messages about zero length images should be printed out\n",
-        "split_data(CAT_SOURCE_DIR, TRAINING_CATS_DIR, VALIDATION_CATS_DIR, split_size)\n",
-        "split_data(DOG_SOURCE_DIR, TRAINING_DOGS_DIR, VALIDATION_DOGS_DIR, split_size)\n",
+        "split_data(CAT_SOURCE_DIR, TRAINING_CATS_DIR, TESTING_CATS_DIR, split_size)\n",
+        "split_data(DOG_SOURCE_DIR, TRAINING_DOGS_DIR, TESTING_DOGS_DIR, split_size)\n",
         "\n",
         "# Check that the number of images matches the expected output\n",
-        "\n",
-        "# Your function should perform copies rather than moving images so original directories should contain unchanged images\n",
-        "print(f\"\\n\\nOriginal cat's directory has {len(os.listdir(CAT_SOURCE_DIR))} images\")\n",
-        "print(f\"Original dog's directory has {len(os.listdir(DOG_SOURCE_DIR))} images\\n\")\n",
-        "\n",
-        "# Training and validation splits\n",
-        "print(f\"There are {len(os.listdir(TRAINING_CATS_DIR))} images of cats for training\")\n",
+        "print(f\"\\n\\nThere are {len(os.listdir(TRAINING_CATS_DIR))} images of cats for training\")\n",
         "print(f\"There are {len(os.listdir(TRAINING_DOGS_DIR))} images of dogs for training\")\n",
-        "print(f\"There are {len(os.listdir(VALIDATION_CATS_DIR))} images of cats for validation\")\n",
-        "print(f\"There are {len(os.listdir(VALIDATION_DOGS_DIR))} images of dogs for validation\")"
+        "print(f\"There are {len(os.listdir(TESTING_CATS_DIR))} images of cats for testing\")\n",
+        "print(f\"There are {len(os.listdir(TESTING_DOGS_DIR))} images of dogs for testing\")"
       ]
     },
     {
@@ -428,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "24714cb2",
       "metadata": {
         "cellView": "code",
@@ -439,59 +523,59 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# GRADED FUNCTION: train_val_generators\n",
         "def train_val_generators(TRAINING_DIR, VALIDATION_DIR):\n",
-        "  \"\"\"\n",
-        "  Creates the training and validation data generators\n",
-        "\n",
-        "  Args:\n",
-        "    TRAINING_DIR (string): directory path containing the training images\n",
-        "    VALIDATION_DIR (string): directory path containing the testing/validation images\n",
-        "\n",
-        "  Returns:\n",
-        "    train_generator, validation_generator - tuple containing the generators\n",
-        "  \"\"\"\n",
         "  ### START CODE HERE\n",
         "\n",
         "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  train_datagen = None\n",
+        "  train_datagen = ImageDataGenerator(rescale=1.0/255.)\n",
         "\n",
-        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
-        "  train_generator = train_datagen.flow_from_directory(directory=None,\n",
-        "                                                      batch_size=None,\n",
-        "                                                      class_mode=None,\n",
-        "                                                      target_size=(None, None))\n",
+        "  # Pass in the appropiate arguments to the flow_from_directory method\n",
+        "  train_generator = train_datagen.flow_from_directory(directory=TRAINING_DIR,\n",
+        "                                                      batch_size=100,\n",
+        "                                                      class_mode='binary',\n",
+        "                                                      target_size=(150, 150))\n",
         "\n",
         "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  validation_datagen = None\n",
+        "  validation_datagen = ImageDataGenerator(rescale=1.0/255.)\n",
         "\n",
-        "  # Pass in the appropriate arguments to the flow_from_directory method\n",
-        "  validation_generator = validation_datagen.flow_from_directory(directory=None,\n",
-        "                                                                batch_size=None,\n",
-        "                                                                class_mode=None,\n",
-        "                                                                target_size=(None, None))\n",
+        "  # Pass in the appropiate arguments to the flow_from_directory method\n",
+        "  validation_generator = validation_datagen.flow_from_directory(directory=VALIDATION_DIR,\n",
+        "                                                                batch_size=100,\n",
+        "                                                                class_mode='binary',\n",
+        "                                                                target_size=(150, 150))\n",
         "  ### END CODE HERE\n",
         "  return train_generator, validation_generator"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "0a13c894",
       "metadata": {
         "id": "0a13c894",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "228dc159-5ed2-4688-d2b1-2a63e45af269"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 22498 images belonging to 2 classes.\n",
+            "Found 2500 images belonging to 2 classes.\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
-        "\n",
         "# Test your generators\n",
-        "train_generator, validation_generator = train_val_generators(TRAINING_DIR, VALIDATION_DIR)"
+        "train_generator, validation_generator = train_val_generators(TRAINING_DIR, TESTING_DIR)"
       ]
     },
     {
@@ -527,7 +611,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "2141d195",
       "metadata": {
         "cellView": "code",
@@ -539,8 +623,6 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# GRADED FUNCTION: create_model\n",
         "def create_model():\n",
         "  # DEFINE A KERAS MODEL TO CLASSIFY CATS V DOGS\n",
@@ -549,12 +631,20 @@
         "  ### START CODE HERE\n",
         "\n",
         "  model = tf.keras.models.Sequential([\n",
-        "      None,\n",
+        "    tf.keras.layers.Conv2D(16,(3,3), activation = 'relu', input_shape=(150,150,3)),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "    tf.keras.layers.Conv2D(32,(3,3), activation = 'relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "    tf.keras.layers.Conv2D(64,(3,3), activation = 'relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(512, activation = 'relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
         "  ])\n",
         "\n",
         "\n",
-        "  model.compile(optimizer=None,\n",
-        "                loss=None,\n",
+        "  model.compile(optimizer = tf.keras.optimizers.RMSprop(learning_rate=0.001),\n",
+        "                loss='binary_crossentropy',\n",
         "                metrics=['accuracy'])\n",
         "\n",
         "  ### END CODE HERE\n",
@@ -580,9 +670,39 @@
       "id": "87cbef80",
       "metadata": {
         "id": "87cbef80",
-        "tags": []
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2518d974-6e66-44b9-ec80-0a7825f14dd8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            " 30/225 [===>..........................] - ETA: 8:09 - loss: 1.0822 - accuracy: 0.5193"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/PIL/TiffImagePlugin.py:858: UserWarning: Truncated File Read\n",
+            "  warnings.warn(str(msg))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "225/225 [==============================] - 561s 2s/step - loss: 0.7037 - accuracy: 0.6106 - val_loss: 0.5749 - val_accuracy: 0.7112\n",
+            "Epoch 2/15\n",
+            "128/225 [================>.............] - ETA: 3:49 - loss: 0.5580 - accuracy: 0.7104"
+          ]
+        }
+      ],
       "source": [
         "# Get the untrained model\n",
         "model = create_model()\n",
