--- a/Copia_de_C2W1_Assignment.ipynb
+++ b/Copia_de_C2W1_Assignment.ipynb
@@ -699,7 +699,11 @@
           "text": [
             "225/225 [==============================] - 561s 2s/step - loss: 0.7037 - accuracy: 0.6106 - val_loss: 0.5749 - val_accuracy: 0.7112\n",
             "Epoch 2/15\n",
-            "128/225 [================>.............] - ETA: 3:49 - loss: 0.5580 - accuracy: 0.7104"
+            "225/225 [==============================] - 547s 2s/step - loss: 0.5417 - accuracy: 0.7263 - val_loss: 0.5419 - val_accuracy: 0.7208\n",
+            "Epoch 3/15\n",
+            "225/225 [==============================] - 544s 2s/step - loss: 0.4823 - accuracy: 0.7670 - val_loss: 0.4613 - val_accuracy: 0.7844\n",
+            "Epoch 4/15\n",
+            "107/225 [=============>................] - ETA: 4:33 - loss: 0.4390 - accuracy: 0.7963"
           ]
         }
       ],
