--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "d43abc49",
       "metadata": {
         "id": "d43abc49",
@@ -64,14 +64,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "dfe8528d",
       "metadata": {
         "id": "dfe8528d",
         "lines_to_next_cell": 2,
-        "tags": []
+        "tags": [],
+        "outputId": "f9a8a6e4-4e1e-494e-c6e4-46175edba287",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-10-06 22:05:51--  https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip\n",
+            "Resolving download.microsoft.com (download.microsoft.com)... 23.49.101.59, 2600:141b:e800:1483::317f, 2600:141b:e800:148c::317f\n",
+            "Connecting to download.microsoft.com (download.microsoft.com)|23.49.101.59|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 824887076 (787M) [application/octet-stream]\n",
+            "Saving to: ‘/tmp/cats-and-dogs.zip’\n",
+            "\n",
+            "/tmp/cats-and-dogs. 100%[===================>] 786.67M   109MB/s    in 8.7s    \n",
+            "\n",
+            "2023-10-06 22:06:01 (89.9 MB/s) - ‘/tmp/cats-and-dogs.zip’ saved [824887076/824887076]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# If the URL doesn't work, visit https://www.microsoft.com/en-us/download/confirmation.aspx?id=54765\n",
         "# And right click on the 'Download Manually' link to get a new URL to the dataset\n",
@@ -100,15 +122,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "76034c9d",
       "metadata": {
         "id": "76034c9d",
         "tags": [
           "graded"
-        ]
+        ],
+        "outputId": "0991fe1e-b802-4443-bfbc-23c2660ec45c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 12500 images of dogs.\n",
+            "There are 12500 images of cats.\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -153,25 +188,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 4,
       "id": "1e6c840a",
       "metadata": {
         "cellView": "code",
         "id": "1e6c840a",
         "tags": [
           "graded"
-        ]
+        ],
+        "outputId": "6fab2b03-ca9d-40ef-c2e1-fdf204531e74",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You should not be seeing this since the upper directory is removed beforehand\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
         "# Define root directory\n",
-        "import os\n",
-        "\n",
         "root_dir = '/tmp/cats-v-dogs'\n",
         "\n",
-        "# Empty directory to prevent FileExistsError if the function is run several times\n",
+        "# Empty directory to prevent FileExistsError is the function is run several times\n",
         "if os.path.exists(root_dir):\n",
         "  shutil.rmtree(root_dir)\n",
         "\n",
@@ -195,7 +240,7 @@
         "  train_dir = os.path.join(root_path, 'training')\n",
         "  val_dir = os.path.join(root_path, 'validation')\n",
         "\n",
-        "  # Directory with training and validation cat/dog pictures\n",
+        "  # Directory with training and valuation cat/dog pictures\n",
         "  train_cats_dir = os.path.join(train_dir, 'cats')\n",
         "  train_dogs_dir = os.path.join(train_dir, 'dogs')\n",
         "  val_cats_dir = os.path.join(val_dir, 'cats')\n",
@@ -206,6 +251,15 @@
         "  os.makedirs(val_cats_dir)\n",
         "  os.makedirs(val_dogs_dir)\n",
         "\n",
+        "  pass\n",
+        "\n",
+        "  ### END CODE HERE\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "  create_train_val_dirs(root_path=root_dir)\n",
+        "except FileExistsError:\n",
+        "  print(\"You should not be seeing this since the upper directory is removed beforehand\")\n",
         "  pass\n",
         "\n",
         "\n",
@@ -220,29 +274,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "id": "08f735fe",
       "metadata": {
         "id": "08f735fe",
         "tags": [
           "graded"
         ],
+        "outputId": "3971fb04-4b1b-4242-e8e5-fd5adf1a8235",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d6283f61-6266-4598-b9ca-2ba90bbefbc8"
+        }
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/tmp/cats-v-dogs/training\n",
             "/tmp/cats-v-dogs/validation\n",
-            "/tmp/cats-v-dogs/training/dogs\n",
-            "/tmp/cats-v-dogs/training/cats\n",
+            "/tmp/cats-v-dogs/training\n",
             "/tmp/cats-v-dogs/validation/dogs\n",
-            "/tmp/cats-v-dogs/validation/cats\n"
+            "/tmp/cats-v-dogs/validation/cats\n",
+            "/tmp/cats-v-dogs/training/dogs\n",
+            "/tmp/cats-v-dogs/training/cats\n"
           ]
         }
       ],
@@ -311,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 6,
       "id": "e1c123a7",
       "metadata": {
         "cellView": "code",
@@ -322,6 +376,7 @@
       },
       "outputs": [],
       "source": [
+        "\n",
         "# GRADED FUNCTION: split_data\n",
         "def split_data(SOURCE_DIR, TRAINING_DIR, VALIDATION_DIR, SPLIT_SIZE):\n",
         "  \"\"\"\n",
@@ -365,17 +420,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 7,
       "id": "7f488106",
       "metadata": {
         "id": "7f488106",
         "tags": [
           "graded"
-        ]
+        ],
+        "outputId": "0b1b0b95-e4ad-4955-835a-a78693241f04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "666.jpg is zero length, so ignoring.\n",
+            "11702.jpg is zero length, so ignoring.\n",
+            "\n",
+            "\n",
+            "Original cat's directory has 12500 images\n",
+            "Original dog's directory has 12500 images\n",
+            "\n",
+            "There are 11249 images of cats for training\n",
+            "There are 11249 images of dogs for training\n",
+            "There are 1250 images of cats for validation\n",
+            "There are 1250 images of dogs for validation\n"
+          ]
+        }
+      ],
       "source": [
-        "import os\n",
+        "# grader-required-cell\n",
         "\n",
         "# Test your split_data function\n",
         "\n",
@@ -407,7 +484,24 @@
         "    os.remove(file.path)\n",
         "\n",
         "# Define proportion of images used for training\n",
-        "split_size = .9\n"
+        "split_size = .9\n",
+        "\n",
+        "# Run the function\n",
+        "# NOTE: Messages about zero length images should be printed out\n",
+        "split_data(CAT_SOURCE_DIR, TRAINING_CATS_DIR, VALIDATION_CATS_DIR, split_size)\n",
+        "split_data(DOG_SOURCE_DIR, TRAINING_DOGS_DIR, VALIDATION_DOGS_DIR, split_size)\n",
+        "\n",
+        "# Check that the number of images matches the expected output\n",
+        "\n",
+        "# Your function should perform copies rather than moving images so original directories should contain unchanged images\n",
+        "print(f\"\\n\\nOriginal cat's directory has {len(os.listdir(CAT_SOURCE_DIR))} images\")\n",
+        "print(f\"Original dog's directory has {len(os.listdir(DOG_SOURCE_DIR))} images\\n\")\n",
+        "\n",
+        "# Training and validation splits\n",
+        "print(f\"There are {len(os.listdir(TRAINING_CATS_DIR))} images of cats for training\")\n",
+        "print(f\"There are {len(os.listdir(TRAINING_DOGS_DIR))} images of dogs for training\")\n",
+        "print(f\"There are {len(os.listdir(VALIDATION_CATS_DIR))} images of cats for validation\")\n",
+        "print(f\"There are {len(os.listdir(VALIDATION_DOGS_DIR))} images of dogs for validation\")"
       ]
     },
     {
@@ -452,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "id": "24714cb2",
       "metadata": {
         "cellView": "code",
@@ -500,15 +594,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "0a13c894",
       "metadata": {
         "id": "0a13c894",
         "tags": [
           "graded"
-        ]
+        ],
+        "outputId": "b4786fb9-8e09-45f5-ef53-474df82b4d91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 22498 images belonging to 2 classes.\n",
+            "Found 2500 images belonging to 2 classes.\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -549,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 11,
       "id": "2141d195",
       "metadata": {
         "cellView": "code",
@@ -561,8 +668,9 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "import tensorflow as tf\n",
+        "\n",
+        "from tensorflow.keras.optimizers import RMSprop\n",
+        "\n",
         "# GRADED FUNCTION: create_model\n",
         "def create_model():\n",
         "  # DEFINE A KERAS MODEL TO CLASSIFY CATS V DOGS\n",
@@ -571,7 +679,7 @@
         "  ### START CODE HERE\n",
         "\n",
         "  model = tf.keras.models.Sequential([\n",
-        "       tf.keras.layers.Conv2D(16, (3,3), activation='relu', input_shape=(150, 150, 3)),\n",
+        "      tf.keras.layers.Conv2D(16, (3,3), activation='relu', input_shape=(150, 150, 3)),\n",
         "      tf.keras.layers.MaxPooling2D(2,2),\n",
         "      tf.keras.layers.Conv2D(32, (3,3), activation='relu'),\n",
         "      tf.keras.layers.MaxPooling2D(2,2),\n",
@@ -588,10 +696,8 @@
         "  ])\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "  model.compile(optimizer=None,\n",
-        "                loss=None,\n",
+        "  model.compile(optimizer=RMSprop(learning_rate=0.001),\n",
+        "                loss='binary_crossentropy',\n",
         "                metrics=['accuracy'])\n",
         "\n",
         "  ### END CODE HERE\n",
@@ -613,57 +719,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "id": "87cbef80",
       "metadata": {
         "id": "87cbef80",
         "tags": [],
+        "outputId": "6c56dc1c-95f1-4ab5-90c6-b120bf20608d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 256
-        },
-        "outputId": "6280483e-aa1c-4edc-a8cc-cc087359151a"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-79-3d91ef08986a>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m history = model.fit(\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mtrain_generator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'train_generator' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            " 13/450 [..............................] - ETA: 11:10 - loss: 0.6940 - accuracy: 0.5015"
           ]
         }
       ],
       "source": [
-        "# Define and compile your model\n",
-        "model = tf.keras.models.Sequential([\n",
-        "    # Add layers to your model here\n",
-        "])\n",
-        "\n",
-        "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "# Get the untrained model\n",
+        "model = create_model()\n",
         "\n",
         "# Train the model\n",
-        "history = model.fit(\n",
-        "    train_generator,\n",
-        "    epochs=15,\n",
-        "    verbose=1,\n",
-        "    validation_data=validation_generator\n",
-        ")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "# Note that this may take some time.\n",
+        "history = model.fit(train_generator,\n",
+        "                    epochs=15,\n",
+        "                    verbose=1,\n",
+        "                    validation_data=validation_generator)"
       ]
     },
     {
