--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -70,10 +70,10 @@
         "id": "dfe8528d",
         "lines_to_next_cell": 2,
         "tags": [],
-        "outputId": "f9a8a6e4-4e1e-494e-c6e4-46175edba287",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f9a8a6e4-4e1e-494e-c6e4-46175edba287"
       },
       "outputs": [
         {
@@ -129,10 +129,10 @@
         "tags": [
           "graded"
         ],
-        "outputId": "0991fe1e-b802-4443-bfbc-23c2660ec45c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0991fe1e-b802-4443-bfbc-23c2660ec45c"
       },
       "outputs": [
         {
@@ -196,10 +196,10 @@
         "tags": [
           "graded"
         ],
-        "outputId": "6fab2b03-ca9d-40ef-c2e1-fdf204531e74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6fab2b03-ca9d-40ef-c2e1-fdf204531e74"
       },
       "outputs": [
         {
@@ -281,10 +281,10 @@
         "tags": [
           "graded"
         ],
-        "outputId": "3971fb04-4b1b-4242-e8e5-fd5adf1a8235",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3971fb04-4b1b-4242-e8e5-fd5adf1a8235"
       },
       "outputs": [
         {
@@ -427,10 +427,10 @@
         "tags": [
           "graded"
         ],
-        "outputId": "0b1b0b95-e4ad-4955-835a-a78693241f04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0b1b0b95-e4ad-4955-835a-a78693241f04"
       },
       "outputs": [
         {
@@ -601,10 +601,10 @@
         "tags": [
           "graded"
         ],
-        "outputId": "b4786fb9-8e09-45f5-ef53-474df82b4d91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b4786fb9-8e09-45f5-ef53-474df82b4d91"
       },
       "outputs": [
         {
@@ -724,10 +724,10 @@
       "metadata": {
         "id": "87cbef80",
         "tags": [],
-        "outputId": "6c56dc1c-95f1-4ab5-90c6-b120bf20608d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6c56dc1c-95f1-4ab5-90c6-b120bf20608d"
       },
       "outputs": [
         {
@@ -735,7 +735,24 @@
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            " 13/450 [..............................] - ETA: 11:10 - loss: 0.6940 - accuracy: 0.5015"
+            "450/450 [==============================] - ETA: 0s - loss: 0.6082 - accuracy: 0.6587"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/PIL/TiffImagePlugin.py:858: UserWarning: Truncated File Read\n",
+            "  warnings.warn(str(msg))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r450/450 [==============================] - 589s 1s/step - loss: 0.6082 - accuracy: 0.6587 - val_loss: 0.5131 - val_accuracy: 0.7584\n",
+            "Epoch 2/15\n",
+            " 18/450 [>.............................] - ETA: 9:00 - loss: 0.5194 - accuracy: 0.7511"
           ]
         }
       ],
