--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -752,7 +752,11 @@
           "text": [
             "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r450/450 [==============================] - 589s 1s/step - loss: 0.6082 - accuracy: 0.6587 - val_loss: 0.5131 - val_accuracy: 0.7584\n",
             "Epoch 2/15\n",
-            " 18/450 [>.............................] - ETA: 9:00 - loss: 0.5194 - accuracy: 0.7511"
+            "450/450 [==============================] - 574s 1s/step - loss: 0.4818 - accuracy: 0.7703 - val_loss: 0.4316 - val_accuracy: 0.8012\n",
+            "Epoch 3/15\n",
+            "450/450 [==============================] - 564s 1s/step - loss: 0.4031 - accuracy: 0.8138 - val_loss: 0.3696 - val_accuracy: 0.8368\n",
+            "Epoch 4/15\n",
+            "247/450 [===============>..............] - ETA: 4:04 - loss: 0.3474 - accuracy: 0.8451"
           ]
         }
       ],
