--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -756,7 +756,11 @@
             "Epoch 3/15\n",
             "450/450 [==============================] - 564s 1s/step - loss: 0.4031 - accuracy: 0.8138 - val_loss: 0.3696 - val_accuracy: 0.8368\n",
             "Epoch 4/15\n",
-            "247/450 [===============>..............] - ETA: 4:04 - loss: 0.3474 - accuracy: 0.8451"
+            "450/450 [==============================] - 583s 1s/step - loss: 0.3438 - accuracy: 0.8485 - val_loss: 0.3247 - val_accuracy: 0.8516\n",
+            "Epoch 5/15\n",
+            "450/450 [==============================] - 567s 1s/step - loss: 0.2840 - accuracy: 0.8758 - val_loss: 0.3016 - val_accuracy: 0.8696\n",
+            "Epoch 6/15\n",
+            "146/450 [========>.....................] - ETA: 6:04 - loss: 0.2209 - accuracy: 0.9072"
           ]
         }
       ],
